@@ -154,7 +154,7 @@ extern void realtape_print_footer(void);
 extern long long int realtape_file_size;
 extern long long int realtape_file_size_counter;
 
-
+extern int visual_cassette_tape_rodillo_arrastre_grados;
 
 extern void realtape_pause_unpause(void);
 extern int realtape_get_current_bit_playing(void);
