@@ -7,6 +7,8 @@ Added ZX Microdrive emulation on ZX Spectrum: that includes:
 - Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
 - Visual Microdrive: Allow to see a microdrive cartridge in action
 
+Added Hilow Datadrive Raw emulation, like the real device
+Added Visual Cassette Tape window
 Added LEC memory extension emulation
 Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
 Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or any other cheat in a game
